--- a/unpacked/background.html
+++ b/unpacked/background.html
@@ -1,1 +1,1 @@
-<script type="text/javascript" src="background.js"></script>
+<script type="text/javascript" src="javascripts/background.js"></script>
