--- a/unpacked/options.html
+++ b/unpacked/options.html
@@ -11,7 +11,10 @@
         <h3 class="text-muted">Simple Bitcoin Ticker</h3>
     </div>
     <div class="row marketing">
-        <div class="col-lg-6">
+        <div class="col-lg-12">
+            <div id="formInfo" class="alert alert-dismissable hide">
+                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+            </div>
             <form id="formOptions" role="form">
                 <div class="form-group">
                     <label for="inputEmail3">Default Market:</label>
@@ -25,7 +28,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputPassword3">Refresh Time: (ms)</label>
+                    <label for="inputPassword3">Refresh Time: (1000ms ~ 3000000ms)</label>
                     <input type="text" name="refresh_time" class="form-control" id="inputRefreshTime" placeholder="15000">
                 </div>
                 <div class="form-group">
