--- a/unpacked/options.html
+++ b/unpacked/options.html
@@ -20,10 +20,16 @@
                     <label for="inputEmail3">Default Market:</label>
                     <div id="inputMarketWrapper">
                         <label class="radio-inline radio-w120">
-                            <input type="radio" name="default_market" value="btcchina" checked="checked"> BTCChina
+                            <input type="radio" name="default_market" value="mtgox" checked="checked"> Mt.Gox
                         </label>
                         <label class="radio-inline radio-w120">
-                            <input type="radio" name="default_market" value="mtgox"> Mt.Gox
+                            <input type="radio" name="default_market" value="bitstamp"> Bitstamp
+                        </label>
+                        <label class="radio-inline radio-w120">
+                            <input type="radio" name="default_market" value="btcchina"> BTCChina
+                        </label>
+                        <label class="radio-inline radio-w120">
+                            <input type="radio" name="default_market" value="okcoin"> OKCoin
                         </label>
                     </div>
                 </div>
