--- a/unpacked/options.html
+++ b/unpacked/options.html
@@ -23,10 +23,16 @@
                             <input type="radio" name="default_market" value="mtgox" checked="checked"> Mt.Gox
                         </label>
                         <label class="radio-inline radio-w120">
+                            <input type="radio" name="default_market" value="btce"> BTC-E
+                        </label>
+                        <label class="radio-inline radio-w120">
                             <input type="radio" name="default_market" value="bitstamp"> Bitstamp
                         </label>
                         <label class="radio-inline radio-w120">
                             <input type="radio" name="default_market" value="btcchina"> BTCChina
+                        </label>
+                        <label class="radio-inline radio-w120">
+                            <input type="radio" name="default_market" value="huobi"> Huobi
                         </label>
                         <label class="radio-inline radio-w120">
                             <input type="radio" name="default_market" value="okcoin"> OKCoin
