--- a/src/options.html
+++ b/src/options.html
@@ -20,7 +20,7 @@
                     <label for="inputEmail3">Default Market:</label>
                     <div id="inputMarketWrapper">
                         <label class="radio-inline radio-w120">
-                            <input type="radio" name="default_market" value="mtgox" checked="checked"> Mt.Gox
+                            <input type="radio" name="default_market" value="huobi" checked="checked"> Huobi
                         </label>
                         <label class="radio-inline radio-w120">
                             <input type="radio" name="default_market" value="btce"> BTC-E
@@ -30,9 +30,6 @@
                         </label>
                         <label class="radio-inline radio-w120">
                             <input type="radio" name="default_market" value="btcchina"> BTCChina
-                        </label>
-                        <label class="radio-inline radio-w120">
-                            <input type="radio" name="default_market" value="huobi"> Huobi
                         </label>
                         <label class="radio-inline radio-w120">
                             <input type="radio" name="default_market" value="okcoin"> OKCoin
