added markets: 796 Xchange, BTCTrade, BTC100

--- a/src/options.html
+++ b/src/options.html
@@ -23,6 +23,9 @@
                             <input type="radio" name="default_market" value="huobi" checked="checked"> Huobi
                         </label>
                         <label class="radio-inline radio-w120">
+                            <input type="radio" name="default_market" value="796"> 796 Xchange
+                        </label>
+                        <label class="radio-inline radio-w120">
                             <input type="radio" name="default_market" value="btce"> BTC-E
                         </label>
                         <label class="radio-inline radio-w120">
@@ -36,6 +39,12 @@
                         </label>
                         <label class="radio-inline radio-w120">
                             <input type="radio" name="default_market" value="chbtc"> CHBTC
+                        </label>
+                        <label class="radio-inline radio-w120">
+                            <input type="radio" name="default_market" value="btctrade"> BTCTrade
+                        </label>
+                        <label class="radio-inline radio-w120">
+                            <input type="radio" name="default_market" value="btc100"> BTC100
                         </label>
                     </div>
                 </div>
