added new market: Bitfinex

--- a/src/options.html
+++ b/src/options.html
@@ -29,6 +29,9 @@
                             <input type="radio" name="default_market" value="btce"> BTC-E
                         </label>
                         <label class="radio-inline radio-w120">
+                            <input type="radio" name="default_market" value="bitfinex"> Bitfinex
+                        </label>
+                        <label class="radio-inline radio-w120">
                             <input type="radio" name="default_market" value="bitstamp"> Bitstamp
                         </label>
                         <label class="radio-inline radio-w120">
