--- a/src/options.html
+++ b/src/options.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Options - Simple Bitcoin Ticker</title>
+    <title>Options - Simple Reddcoin Ticker</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 <div class="container">
     <div class="header">
-        <h3 class="text-muted">Simple Bitcoin Ticker</h3>
+        <h3 class="text-muted">Simple Reddcoin Ticker</h3>
     </div>
     <div class="row marketing">
         <div class="col-lg-12">
@@ -20,34 +20,16 @@
                     <label for="inputEmail3">Default Market:</label>
                     <div id="inputMarketWrapper">
                         <label class="radio-inline radio-w120">
-                            <input type="radio" name="default_market" value="huobi" checked="checked"> Huobi
+                            <input type="radio" name="default_market" value="cryptsy" checked="checked"> Cryptsy
                         </label>
                         <label class="radio-inline radio-w120">
-                            <input type="radio" name="default_market" value="796"> 796 Xchange
+                            <input type="radio" name="default_market" value="mintpal"> Mintpal
                         </label>
                         <label class="radio-inline radio-w120">
-                            <input type="radio" name="default_market" value="btce"> BTC-E
+                            <input type="radio" name="default_market" value="poloniex"> Poloniex
                         </label>
                         <label class="radio-inline radio-w120">
-                            <input type="radio" name="default_market" value="bitfinex"> Bitfinex
-                        </label>
-                        <label class="radio-inline radio-w120">
-                            <input type="radio" name="default_market" value="bitstamp"> Bitstamp
-                        </label>
-                        <label class="radio-inline radio-w120">
-                            <input type="radio" name="default_market" value="btcchina"> BTCChina
-                        </label>
-                        <label class="radio-inline radio-w120">
-                            <input type="radio" name="default_market" value="okcoin"> OKCoin
-                        </label>
-                        <label class="radio-inline radio-w120">
-                            <input type="radio" name="default_market" value="chbtc"> CHBTC
-                        </label>
-                        <label class="radio-inline radio-w120">
-                            <input type="radio" name="default_market" value="btctrade"> BTCTrade
-                        </label>
-                        <label class="radio-inline radio-w120">
-                            <input type="radio" name="default_market" value="btc100"> BTC100
+                            <input type="radio" name="default_market" value="bittrex"> Bittrex
                         </label>
                     </div>
                 </div>
