Limit markets to Bittrex in options page

--- a/src/options.html
+++ b/src/options.html
@@ -20,16 +20,7 @@
                     <label for="inputEmail3">Default Market:</label>
                     <div id="inputMarketWrapper">
                         <label class="radio-inline radio-w120">
-                            <input type="radio" name="default_market" value="cryptsy" checked="checked"> Cryptsy
-                        </label>
-                        <label class="radio-inline radio-w120">
-                            <input type="radio" name="default_market" value="mintpal"> Mintpal
-                        </label>
-                        <label class="radio-inline radio-w120">
-                            <input type="radio" name="default_market" value="poloniex"> Poloniex
-                        </label>
-                        <label class="radio-inline radio-w120">
-                            <input type="radio" name="default_market" value="bittrex"> Bittrex
+                            <input type="radio" name="default_market" value="bittrex" checked="checked"> Bittrex
                         </label>
                     </div>
                 </div>
